public/styles/tweets.css
article {
  border: 2px;
  border-color: black;
  border-style: solid;
  margin-top: 40px;
  margin-bottom: 40px;
}

article>* {
  margin-left: 10px;
  margin-right: 10px;
}

.tweet-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.avatars {
  margin: 10px 10px 10px 0px;
  width: 40px;
  height: 40px;
}

.tweet-body {
  border-bottom: 5px;
  border-top-width: 0px;
  border-left-width: 0px;
  border-right-width: 0px;
  border-color: black;
  border-style: solid;
}

.tweet-footer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.tweet-name-icon {
  display: flex;
  flex-direction: row;
}

i:hover {
  color: yellow;
}

article:hover {
  box-shadow: 10px 10px 10px black;
}

